# agent-aws

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  pages.yml  release.yml
docs/: configuration.md  getting-started.md  index.md  platform-support.md  releasing.md  roadmap.md  threat-model.md
scripts/: release
share/agent-aws/: agent-aws.sb
